--- a/web/packages/transport-common/package.json
+++ b/web/packages/transport-common/package.json
@@ -15,7 +15,7 @@
     "test": "jest --coverage --runInBand"
   },
   "dependencies": {
-    "rxjs": "^5.5.2",
+    "rxjs": "7.5.2",
     "protobufjs": "6.11.2",
     "@types/loglevel": "^1.4.29",
     "@types/long": "^4.0.0",
@@ -29,7 +29,7 @@
   },
   "peerDependencies": {
     "protobufjs": "6.11.2",
-    "rxjs": "^5.5.2"
+    "rxjs": "^7.5.2"
   },
   "devDependencies": {
     "@types/long": "^4.0.0",
