--- a/web/packages/broker/package.json
+++ b/web/packages/broker/package.json
@@ -15,35 +15,19 @@
     "test": "jest --coverage"
   },
   "dependencies": {
-    "protobufjs": "6.11.2",
-    "@plexus-interop/client": "0.1.0",
-    "@plexus-interop/transport-common": "0.1.0",
-    "@plexus-interop/common": "0.1.0",
-    "@plexus-interop/metadata": "0.1.0",
-    "@plexus-interop/protocol": "0.1.0",
-    "@plexus-interop/client-api": "0.1.0",
-    "ya-js-storage": "0.1.4",
+    "@plexus-interop/client": "file:../client",
+    "@plexus-interop/client-api": "file:../client-api",
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/metadata": "file:../metadata",
+    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/transport-common": "file:../transport-common",
     "long": "^4.0.0",
+    "protobufjs": "6.11.2",
     "reflect-metadata": "^0.1.10",
-    "tslib": "^1.10.0"
+    "tslib": "^2.3.1",
+    "ya-js-storage": "0.1.4"
   },
   "main": "dist/main/src/index.js",
-  "devDependencies": {
-    "rxjs": "^7.5.2",
-    "@types/jest": "^23.1.3",
-    "@types/jstorage": "^0.3.30",
-    "@types/long": "^4.0.0",
-    "@types/node": "^7.0.5",
-    "@types/superagent": "^3.5.6",
-    "babel-register": "^6.23.0",
-    "browserify": "^14.5.0",
-    "jasmine-reporters": "^2.2.0",
-    "jest": "^23.5.0",
-    "trash-cli": "^1.4.0",
-    "tslint": "5.8.0",
-    "typescript": "3.7.2",
-    "yarn": "^1.17.3"
-  },
   "peerDependencies": {
     "protobufjs": "6.11.2",
     "rxjs": "^7.5.2"
