--- a/web/packages/ccy-pair-rate-provider/package.json
+++ b/web/packages/ccy-pair-rate-provider/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "license": "Apache-2.0",
   "dependencies": {
-    "@plexus-interop/client": "0.1.0",
-    "@plexus-interop/websocket-transport": "0.1.0",
-    "@plexus-interop/transport-common": "0.1.0",
-    "@plexus-interop/common": "0.1.0",
+    "@plexus-interop/client": "file:../client",
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/transport-common": "file:../transport-common",
+    "@plexus-interop/websocket-transport": "file:../websocket-transport",
     "protobufjs": "6.11.2"
   },
   "scripts": {
@@ -19,15 +19,5 @@
     "package": "browserify ./dist/main/src/index.js --outfile ./dist/app.bundle.js",
     "build": "npm run compile && npm run copy-assets && npm run package",
     "postbuild": "copyfiles ./dist/* -f ../../../bin/win-x86/samples/quick-start/apps/WebCcyPairRateProvider"
-  },
-  "devDependencies": {
-    "@types/long": "^4.0.0",
-    "@types/node": "^7.0.5",
-    "browserify": "^14.5.0",
-    "copyfiles": "^1.2.0",
-    "electron": "1.8.8",
-    "trash": "^4.1.0",
-    "trash-cli": "^1.4.0",
-    "typescript": "3.7.2"
   }
 }
