--- a/web/packages/client-api/package.json
+++ b/web/packages/client-api/package.json
@@ -12,26 +12,15 @@
     "lint": "tslint src/**/*.ts"
   },
   "dependencies": {
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/transport-common": "file:../transport-common",
     "@types/loglevel": "^1.4.29",
     "@types/long": "^4.0.0",
-    "@plexus-interop/transport-common": "0.1.0",
-    "@plexus-interop/protocol": "0.1.0",
-    "@plexus-interop/common": "0.1.0",
     "loglevel": "^1.4.1",
     "long": "^4.0.0",
     "reflect-metadata": "^0.1.10",
-    "tslib": "^1.10.0"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.0.2",
-    "@types/jest": "^23.1.3",
-    "@types/mocha": "^2.2.43",
-    "@types/node": "^7.0.5",
-    "trash": "^4.1.0",
-    "trash-cli": "^1.4.0",
-    "tslint": "5.8.0",
-    "typescript": "3.7.2",
-    "yarn": "^1.17.3"
+    "tslib": "^2.3.1"
   },
   "jest": {
     "moduleFileExtensions": [
