--- a/web/packages/client/package.json
+++ b/web/packages/client/package.json
@@ -18,46 +18,21 @@
     "gen-client-protocol": "npm run gen-client-js && npm run gen-client-ts"
   },
   "dependencies": {
-    "rxjs": "^7.5.2",
-    "protobufjs": "6.11.2",
+    "@plexus-interop/client-api": "file:../client-api",
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/io": "file:../io",
+    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/transport-common": "file:../transport-common",
+    "@plexus-interop/websocket-transport": "file:../websocket-transport",
     "@types/loglevel": "^1.4.29",
     "@types/long": "^4.0.0",
-    "@plexus-interop/transport-common": "0.1.0",
-    "@plexus-interop/common": "0.1.0",
-    "@plexus-interop/client-api": "0.1.0",
-    "@plexus-interop/protocol": "0.1.0",
-    "@plexus-interop/io": "0.1.0",
-    "@plexus-interop/websocket-transport": "0.1.0",
     "loglevel": "^1.4.1",
     "long": "^4.0.0",
+    "protobufjs": "6.11.2",
     "reflect-metadata": "^0.1.10",
-    "tslib": "^1.10.0",
+    "rxjs": "^7.5.2",
+    "tslib": "^2.3.1",
     "typescript-collections": "1.2.3"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.0.2",
-    "@types/jest": "^23.1.3",
-    "@types/mocha": "^2.2.43",
-    "@types/node": "^7.0.5",
-    "babel-register": "^6.23.0",
-    "browserify": "^14.5.0",
-    "chai": "^4.1.0",
-    "copyfiles": "^1.2.0",
-    "glob": "^7.1.2",
-    "jasmine-reporters": "^2.2.0",
-    "jest": "^23.5.0",
-    "jest-cli": "^23.0.0",
-    "karma": "^1.7.1",
-    "minimist": "^1.2.0",
-    "mocha": "^3.5.0",
-    "path": "^0.12.7",
-    "sinon": "^2.4.1",
-    "trash-cli": "^1.4.0",
-    "ts-mockito": "2.0.2",
-    "tslint": "5.8.0",
-    "typescript": "3.7.2",
-    "watchify": "^3.9.0",
-    "yarn": "^1.17.3"
   },
   "jest": {
     "testEnvironment": "node",
