--- a/web/packages/common-api-impl/package.json
+++ b/web/packages/common-api-impl/package.json
@@ -16,33 +16,21 @@
     "test": "jest --coverage"
   },
   "dependencies": {
-    "@plexus-interop/protocol": "0.1.0",
-    "@plexus-interop/remote": "0.1.0",
-    "@plexus-interop/common": "0.1.0",
-    "@plexus-interop/transport-common": "0.1.0",
-    "@plexus-interop/client-api": "0.1.0",
-    "@plexus-interop/io": "0.1.0",
-    "@plexus-interop/metadata": "0.1.0",
-    "@plexus-interop/client": "0.1.0",
-    "@plexus-interop/websocket-transport": "0.1.0",
-    "tslib": "^1.10.0"
+    "@plexus-interop/client": "file:../client",
+    "@plexus-interop/client-api": "file:../client-api",
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/io": "file:../io",
+    "@plexus-interop/metadata": "file:../metadata",
+    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/remote": "file:../remote",
+    "@plexus-interop/transport-common": "file:../transport-common",
+    "@plexus-interop/websocket-transport": "file:../websocket-transport",
+    "tslib": "^2.3.1"
   },
   "peerDependencies": {
     "rxjs": "^7.5.2"
   },
   "main": "dist/main/src/index.js",
-  "devDependencies": {
-    "rxjs": "^7.5.2",
-    "@types/long": "^4.0.0",
-    "@types/jest": "^23.1.3",
-    "jasmine-reporters": "^2.2.0",
-    "jest": "^23.5.0",
-    "trash-cli": "^1.4.0",
-    "tslint": "5.8.0",
-    "typescript": "3.7.2",
-    "browserify": "^14.5.0",
-    "yarn": "^1.17.3"
-  },
   "jest": {
     "testEnvironment": "node",
     "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
