--- a/web/packages/e2e/package.json
+++ b/web/packages/e2e/package.json
@@ -35,59 +35,20 @@
     "e2e-native-debug-run": "node scripts/native-e2e-tests-launcher.js --printBrokerStdout true --debug true --file ./dist/main/tests/native/RendererProcess.bundle.js"
   },
   "dependencies": {
-    "@plexus-interop/broker": "0.1.0",
-    "@plexus-interop/common-api-impl": "0.1.0",
-    "@plexus-interop/protocol": "0.1.0",
-    "@plexus-interop/remote": "0.1.0",
-    "@plexus-interop/common": "0.1.0",
-    "@plexus-interop/transport-common": "0.1.0",
-    "@plexus-interop/client-api": "0.1.0",
-    "@plexus-interop/io": "0.1.0",
-    "@plexus-interop/metadata": "0.1.0",
-    "@plexus-interop/client": "0.1.0",
-    "@plexus-interop/websocket-transport": "0.1.0",
+    "@plexus-interop/broker": "file:../broker",
+    "@plexus-interop/client": "file:../client",
+    "@plexus-interop/client-api": "file:../client-api",
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/common-api-impl": "file:../common-api-impl",
+    "@plexus-interop/io": "file:../io",
+    "@plexus-interop/metadata": "file:../metadata",
+    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/remote": "file:../remote",
+    "@plexus-interop/transport-common": "file:../transport-common",
+    "@plexus-interop/websocket-transport": "file:../websocket-transport",
     "@types/long": "^4.0.0",
-    "protobufjs": "6.11.2",
-    "long": "^4.0.0"
-  },
-  "devDependencies": {
-    "@types/long": "^4.0.0",
-    "@types/chai": "^4.0.2",
-    "@types/mocha": "^2.2.43",
-    "@types/node": "^7.0.5",
-    "babel-register": "^6.23.0",
-    "browserify": "^14.5.0",
-    "browserify-istanbul": "^3.0.1",
-    "chai": "^4.1.0",
-    "chokidar": "^1.7.0",
-    "copyfiles": "^1.2.0",
-    "core-js": "^2.5.3",
-    "electron": "1.8.8",
-    "electron-mocha": "^4.0.2",
-    "glob": "^7.1.2",
-    "http-server": "^0.11.1",
-    "is-electron-renderer": "^2.0.1",
-    "jasmine-reporters": "^2.2.0",
-    "jest": "^23.5.0",
-    "karma": "^1.7.1",
-    "karma-browserify": "^5.1.2",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-ie-launcher": "^1.0.0",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.5",
-    "minimist": "^1.2.0",
-    "mocha": "^3.5.0",
-    "nyc": "^11.2.1",
-    "path": "^0.12.7",
-    "sinon": "^2.4.1",
-    "strip-bom": "^3.0.0",
-    "trash-cli": "^1.4.0",
-    "tree-kill": "^1.1.0",
-    "ts-mockito": "2.0.2",
-    "tslint": "5.8.0",
-    "typescript": "3.7.2",
-    "watchify": "^3.9.0",
-    "yarn": "^1.17.3"
+    "long": "^4.0.0",
+    "protobufjs": "6.11.2"
   },
   "jest": {
     "testEnvironment": "node",
