--- a/web/packages/electron-launcher/package.json
+++ b/web/packages/electron-launcher/package.json
@@ -29,34 +29,17 @@
     "launcher"
   ],
   "dependencies": {
-    "@plexus-interop/client": "0.1.0",
-    "@plexus-interop/common": "0.1.0",
-    "@plexus-interop/transport-common": "0.1.0",
-    "@plexus-interop/protocol": "0.1.0",
-    "@plexus-interop/websocket-transport": "0.1.0",
-    "minimist": "^1.2.0",
-    "strip-bom": "^3.0.0",
-    "rxjs": "^7.5.2",
-    "protobufjs": "6.11.2",
+    "@plexus-interop/client": "file:../client",
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/transport-common": "file:../transport-common",
+    "@plexus-interop/websocket-transport": "file:../websocket-transport",
     "@types/loglevel": "^1.4.29",
+    "minimist": "^1.2.0",
+    "protobufjs": "6.11.2",
+    "rxjs": "^7.5.2",
+    "strip-bom": "^3.0.0",
     "ws": "^3.2.0"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.0.2",
-    "@types/jest": "^23.1.3",
-    "@types/mocha": "^2.2.43",
-    "@types/node": "^7.0.5",
-    "@types/long": "^4.0.0",
-    "browserify": "^14.5.0",
-    "copyfiles": "^1.2.0",
-    "electron": "1.8.8",
-    "electron-log": "^2.2.9",
-    "electron-packager": "^13.1.1",
-    "jest": "^23.5.0",
-    "renamer": "^0.6.1",
-    "trash": "^4.1.0",
-    "trash-cli": "^1.4.0",
-    "typescript": "3.7.2"
   },
   "jest": {
     "testEnvironment": "node",
