--- a/web/packages/io/package.json
+++ b/web/packages/io/package.json
@@ -16,23 +16,12 @@
     "test": "yarn unit"
   },
   "dependencies": {
-    "@plexus-interop/common": "0.1.0",
-    "@plexus-interop/metadata": "0.1.0",
-    "@plexus-interop/protocol": "0.1.0",
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/metadata": "file:../metadata",
+    "@plexus-interop/protocol": "file:../protocol",
     "protobufjs": "6.11.2"
   },
   "main": "dist/main/src/index.js",
-  "devDependencies": {
-    "@types/node": "^7.0.5",
-    "@types/long": "^4.0.0",
-    "@types/jest": "^23.1.3",
-    "jasmine-reporters": "^2.2.0",
-    "jest": "^23.5.0",
-    "trash-cli": "^1.4.0",
-    "tslint": "5.8.0",
-    "typescript": "3.7.2",
-    "yarn": "^1.17.3"
-  },
   "jest": {
     "testEnvironment": "node",
     "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
