--- a/web/packages/metadata/package.json
+++ b/web/packages/metadata/package.json
@@ -16,26 +16,15 @@
     "test": "yarn unit"
   },
   "dependencies": {
-    "rxjs": "^7.5.2",
-    "@plexus-interop/common": "0.1.0",
-    "@plexus-interop/remote": "0.1.0",
-    "@plexus-interop/protocol": "0.1.0"
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/remote": "file:../remote",
+    "rxjs": "^7.5.2"
   },
   "peerDependencies": {
     "rxjs": "^7.5.2"
   },
   "main": "dist/main/src/index.js",
-  "devDependencies": {
-    "@types/node": "^7.0.5",
-    "@types/long": "^4.0.0",
-    "@types/jest": "^23.1.3",
-    "jasmine-reporters": "^2.2.0",
-    "jest": "^23.5.0",
-    "trash-cli": "^1.4.0",
-    "tslint": "5.8.0",
-    "typescript": "3.7.2",
-    "yarn": "^1.17.3"
-  },
   "jest": {
     "testEnvironment": "node",
     "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
