--- a/web/packages/protocol/package.json
+++ b/web/packages/protocol/package.json
@@ -19,24 +19,13 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@plexus-interop/common": "file:../common",
     "@types/long": "^4.0.0",
-    "@plexus-interop/common": "0.1.0",
-    "protobufjs": "6.11.2",
-    "long": "^4.0.0"
+    "long": "^4.0.0",
+    "protobufjs": "6.11.2"
   },
   "peerDependencies": {
     "protobufjs": "6.11.2"
-  },
-  "devDependencies": {
-    "@types/jest": "^23.1.3",
-    "protobufjs": "6.11.2",
-    "@types/node": "^7.0.5",
-    "trash-cli": "^1.4.0",
-    "typescript": "3.7.2",
-    "yarn": "^1.17.3",
-    "copyfiles": "^1.2.0",
-    "jest": "^23.5.0",
-    "espree": "^3.4.3"
   },
   "jest": {
     "testEnvironment": "node",
