--- a/web/packages/remote/package.json
+++ b/web/packages/remote/package.json
@@ -15,27 +15,14 @@
     "test": "yarn unit"
   },
   "dependencies": {
-    "@plexus-interop/common": "0.1.0",
+    "@plexus-interop/common": "file:../common",
     "superagent": "3.8.2",
-    "tslib": "^1.10.0"
+    "tslib": "^2.3.1"
   },
   "peerDependencies": {
     "rxjs": "^7.5.2"
   },
   "main": "dist/main/src/index.js",
-  "devDependencies": {
-    "rxjs": "^7.5.2",
-    "@types/loglevel": "^1.4.29",
-    "@types/long": "^4.0.0",
-    "@types/jest": "^23.1.3",
-    "@types/superagent": "^3.5.6",
-    "jasmine-reporters": "^2.2.0",
-    "jest": "^23.5.0",
-    "trash-cli": "^1.4.0",
-    "tslint": "5.8.0",
-    "typescript": "3.7.2",
-    "yarn": "^1.17.3"
-  },
   "jest": {
     "testEnvironment": "node",
     "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
