--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -28,55 +28,26 @@
     "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
-    "@plexus-interop/broker": "0.1.0",
-    "@plexus-interop/io": "0.1.0",
-    "@plexus-interop/metadata": "0.1.0",
-    "@plexus-interop/common": "0.1.0",
-    "@plexus-interop/protocol": "0.1.0",
-    "@plexus-interop/transport-common": "0.1.0",
-    "@plexus-interop/client": "0.1.0",
-    "@plexus-interop/client-api": "0.1.0",
-    "@plexus-interop/websocket-transport": "0.1.0",
+    "@plexus-interop/broker": "file:../broker",
+    "@plexus-interop/client": "file:../client",
+    "@plexus-interop/client-api": "file:../client-api",
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/io": "file:../io",
+    "@plexus-interop/metadata": "file:../metadata",
+    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/transport-common": "file:../transport-common",
+    "@plexus-interop/websocket-transport": "file:../websocket-transport",
     "@types/core-js": "^0.9.43",
     "arraybuffer-slice": "^0.1.2",
     "bootstrap": "^4.1.0",
     "bootswatch": "^4.1.0",
     "core-js": "^2.5.3",
     "font-awesome": "^4.7.0",
-    "typescript-collections": "1.2.3",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "rxjs": "^7.5.2",
+    "typescript-collections": "1.2.3",
     "zone.js": "^0.8.14"
-  },
-  "devDependencies": {
-    "@types/long": "^4.0.0",
-    "@angular/cli": "1.6.5",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@types/core-js": "^0.9.43",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jest": "^23.1.3",
-    "@types/node": "^7.0.5",
-    "@types/rx": "^4.1.1",
-    "codelyzer": "^4.0.1",
-    "copyfiles": "^1.2.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "jest": "^23.5.0",
-    "jest-preset-angular": "^6.0.0",
-    "karma": "^1.7.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "5.8.0",
-    "typescript": "3.7.2",
-    "prr": "1.0.1"
   },
   "jest": {
     "preset": "jest-preset-angular",
