--- a/web/packages/web-example/package.json
+++ b/web/packages/web-example/package.json
@@ -24,19 +24,10 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "protobufjs": "6.11.2",
-    "@plexus-interop/client": "0.1.0",
-    "@plexus-interop/websocket-transport": "0.1.0",
-    "@plexus-interop/transport-common": "0.1.0",
-    "@plexus-interop/common": "0.1.0"
-  },
-  "devDependencies": {
-    "@types/long": "^4.0.0",
-    "browserify": "^14.5.0",
-    "copyfiles": "^1.2.0",
-    "electron": "1.8.8",
-    "http-server": "^0.11.1",
-    "trash-cli": "^1.4.0",
-    "typescript": "3.7.2"
+    "@plexus-interop/client": "file:../client",
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/transport-common": "file:../transport-common",
+    "@plexus-interop/websocket-transport": "file:../websocket-transport",
+    "protobufjs": "6.11.2"
   }
 }
