--- a/web/packages/websocket-transport/package.json
+++ b/web/packages/websocket-transport/package.json
@@ -15,34 +15,20 @@
     "test": "yarn unit"
   },
   "dependencies": {
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/transport-common": "file:../transport-common",
     "long": "^4.0.0",
-    "rxjs": "^7.5.2",
     "protobufjs": "6.11.2",
-    "@plexus-interop/transport-common": "0.1.0",
-    "@plexus-interop/common": "0.1.0",
-    "@plexus-interop/protocol": "0.1.0",
     "reflect-metadata": "^0.1.10",
-    "tslib": "^1.10.0"
+    "rxjs": "^7.5.2",
+    "tslib": "^2.3.1"
   },
   "peerDependencies": {
     "protobufjs": "6.11.2",
     "rxjs": "^7.5.2"
   },
   "main": "dist/main/src/index.js",
-  "devDependencies": {
-    "@types/jest": "^23.1.3",
-    "@types/long": "^4.0.0",
-    "@types/node": "^7.0.5",
-    "babel-register": "^6.23.0",
-    "find-port": "^2.0.1",
-    "jasmine-reporters": "^2.2.0",
-    "jest": "^23.5.0",
-    "mock-socket": "^7.0.0",
-    "trash-cli": "^1.4.0",
-    "tslint": "5.8.0",
-    "typescript": "3.7.2",
-    "yarn": "^1.17.3"
-  },
   "jest": {
     "testEnvironment": "node",
     "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
