--- a/web/packages/protocol/package.json
+++ b/web/packages/protocol/package.json
@@ -27,6 +27,9 @@
   "peerDependencies": {
     "protobufjs": "6.11.2"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "jest": {
     "testEnvironment": "node",
     "moduleFileExtensions": [
