--- a/web/packages/cli/package.json
+++ b/web/packages/cli/package.json
@@ -34,6 +34,9 @@
     "tar-fs": "1.16.2",
     "tslib": "^2.3.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "jest": {
     "testEnvironment": "node",
     "moduleFileExtensions": [
