--- a/web/packages/client-api/package.json
+++ b/web/packages/client-api/package.json
@@ -22,6 +22,9 @@
     "reflect-metadata": "^0.1.10",
     "tslib": "^2.3.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "jest": {
     "moduleFileExtensions": [
       "ts",
