--- a/web/packages/common-api-impl/package.json
+++ b/web/packages/common-api-impl/package.json
@@ -31,6 +31,9 @@
     "rxjs": "^7.5.2"
   },
   "main": "dist/main/src/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "jest": {
     "testEnvironment": "node",
     "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
