--- a/web/packages/io/package.json
+++ b/web/packages/io/package.json
@@ -22,6 +22,9 @@
     "protobufjs": "6.11.2"
   },
   "main": "dist/main/src/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "jest": {
     "testEnvironment": "node",
     "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
