--- a/web/packages/remote/package.json
+++ b/web/packages/remote/package.json
@@ -23,6 +23,9 @@
     "rxjs": "^7.5.2"
   },
   "main": "dist/main/src/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "jest": {
     "testEnvironment": "node",
     "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
