--- a/web/packages/transport-common/package.json
+++ b/web/packages/transport-common/package.json
@@ -31,6 +31,9 @@
     "protobufjs": "6.11.2",
     "rxjs": "^7.5.2"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "jest": {
     "testEnvironment": "node",
     "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
