--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
   "description": "Plexus Web Interop root module",
   "scripts": {
     "preinstall": "node ./scripts/replace-lock-registry.js && node ./scripts/replace-auth-vars.js --install",
-    "postinstall": "node ./scripts/replace-lock-registry.js --backward",
+    "postinstall": "node ./scripts/replace-lock-registry.js --backward && link-parent-bin",
     "build": "run-s build-only",
     "build-only": "lerna run build --stream --concurrency 1",
     "prepublish-all": "node ./scripts/replace-auth-vars.js --publish && lerna exec -- cross-var shx cp $LERNA_ROOT_PATH/.npmrc .npmrc",
@@ -80,6 +80,7 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "lerna": "^4.0.0",
+    "link-parent-bin": "^2.0.0",
     "minimist": "^1.2.0",
     "mocha": "^3.5.0",
     "mock-socket": "^7.0.0",
