revert to develop state

--- a/web/packages/studio/src/tsconfig.spec.json
+++ b/web/packages/studio/src/tsconfig.spec.json
@@ -5,6 +5,9 @@
     "baseUrl": "./",
     "module": "commonjs",
     "target": "es5",
-    "types": ["jest", "node"]
+    "types": [
+      "jest",
+      "node"
+    ]
   }
 }
