--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
@@ -27,107 +28,55 @@
     "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
-    "@plexus-interop/broker": "file:../../plexus-interop/web/packages/broker",
-    "@plexus-interop/client": "file:../../plexus-interop/web/packages/client",
-    "@plexus-interop/client-api": "file:../../plexus-interop/web/packages/client-api",
-    "@plexus-interop/common": "file:../../plexus-interop/web/packages/common",
-    "@plexus-interop/io": "file:../../plexus-interop/web/packages/io",
-    "@plexus-interop/metadata": "file:../../plexus-interop/web/packages/metadata",
-    "@plexus-interop/protocol": "file:../../plexus-interop/web/packages/protocol",
-    "@plexus-interop/transport-common": "file:../../plexus-interop/web/packages/transport-common",
-    "@plexus-interop/websocket-transport": "file:../../plexus-interop/web/packages/websocket-transport",
+    "@plexus-interop/broker": "latest",
+    "@plexus-interop/io": "latest",
+    "@plexus-interop/metadata": "latest",
+    "@plexus-interop/common": "latest",
+    "@plexus-interop/protocol": "latest",
+    "@plexus-interop/transport-common": "latest",
+    "@plexus-interop/client": "latest",
+    "@plexus-interop/client-api": "latest",
+    "@plexus-interop/websocket-transport": "latest",
     "@types/core-js": "^0.9.43",
     "arraybuffer-slice": "^0.1.2",
     "bootstrap": "^4.1.0",
     "bootswatch": "^4.1.0",
     "core-js": "^2.5.3",
     "font-awesome": "^4.7.0",
+    "typescript-collections": "1.2.3",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "rxjs": "^7.5.2",
-    "typescript-collections": "1.2.3",
+    "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^6",
+    "@types/long": "^4.0.0",
+    "@angular/cli": "1.6.5",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
-      "@types/chai": "^4.0.2",
-      "@types/core-js": "^0.9.43",
-      "@types/fs-extra": "5.0.1",
-      "@types/jasmine": "~2.5.53",
-      "@types/jasminewd2": "~2.0.2",
-      "@types/jest": "^23.1.3",
-      "@types/jstorage": "^0.3.30",
-      "@types/loglevel": "^1.4.29",
-      "@types/long": "^4.0.0",
-      "@types/mocha": "^2.2.43",
-      "@types/node": "^7.0.5",
-      "@types/rx": "^4.1.1",
-      "@types/superagent": "^3.5.6",
-      "babel-register": "^6.23.0",
-      "browserify": "^14.5.0",
-      "browserify-istanbul": "^3.0.1",
-      "chai": "^4.1.0",
-      "chokidar": "^1.7.0",
-      "codelyzer": "^4.0.1",
-      "copyfiles": "^1.2.0",
-      "core-js": "^2.5.3",
-      "cross-var": "1.1.0",
-      "electron": "1.8.8",
-      "electron-log": "^2.2.9",
-      "electron-mocha": "^4.0.2",
-      "electron-packager": "^13.1.1",
-      "espree": "^3.4.3",
-      "find-port": "^2.0.1",
-      "glob": "^7.1.2",
-      "http-server": "^0.11.1",
-      "if-env": "1.0.0",
-      "is-electron-renderer": "^2.0.1",
-      "jasmine-core": "~2.6.2",
-      "jasmine-reporters": "^2.2.0",
-      "jasmine-spec-reporter": "~4.1.0",
-      "jest": "^23.5.0",
-      "jest-cli": "^23.0.0",
-      "jest-preset-angular": "^7.0.0",
-      "karma": "^1.7.1",
-      "karma-browserify": "^5.1.2",
-      "karma-chrome-launcher": "^2.2.0",
-      "karma-cli": "~1.0.1",
-      "karma-coverage-istanbul-reporter": "^1.2.1",
-      "karma-ie-launcher": "^1.0.0",
-      "karma-jasmine": "~1.1.0",
-      "karma-jasmine-html-reporter": "^0.2.2",
-      "karma-mocha": "^1.3.0",
-      "karma-mocha-reporter": "^2.2.5",
-      "lerna": "^4.0.0",
-      "link-parent-bin": "^2.0.0",
-      "minimist": "^1.2.0",
-      "mocha": "^3.5.0",
-      "mock-socket": "^7.0.0",
-      "npm-run-all": "4.1.1",
-      "nyc": "^11.2.1",
-      "path": "^0.12.7",
-      "protobufjs": "6.11.2",
-      "protractor": "~5.1.2",
-      "prr": "1.0.1",
-      "renamer": "^0.6.1",
-      "rxjs": "^7.5.2",
-      "shx": "0.2.2",
-      "sinon": "^2.4.1",
-      "strip-bom": "^3.0.0",
-      "trash": "^4.1.0",
-      "trash-cli": "^1.4.0",
-      "tree-kill": "^1.1.0",
-      "ts-mockito": "2.0.2",
-      "ts-node": "~3.2.0",
-      "tslint": "5.8.0",
-      "typescript": "4.2.4",
-      "watchify": "^3.9.0",
-      "yarn": "^1.17.3"
-    },
-  "publishConfig": {
-    "access": "public"
+    "@types/core-js": "^0.9.43",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/jest": "^23.1.3",
+    "@types/node": "^7.0.5",
+    "@types/rx": "^4.1.1",
+    "codelyzer": "^4.0.1",
+    "copyfiles": "^1.2.0",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "jest": "^23.5.0",
+    "jest-preset-angular": "^6.0.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "5.8.0",
+    "typescript": "3.7.2",
+    "prr": "1.0.1"
   },
   "jest": {
     "preset": "jest-preset-angular",
@@ -135,9 +84,12 @@
       "<rootDir>/src/"
     ],
     "setupTestFrameworkScriptFile": "<rootDir>/src/setup-jest.ts",
-    "testMatch": [
-      "**/__tests__/**/*.ts?(x)",
-      "**/?(*.)+(spec|test).ts?(x)"
+    "transform": {
+      "^.+\\.(ts|js|html)$": "<rootDir>/node_modules/jest-preset-angular/preprocessor.js"
+    },
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/jest-preset-angular/AngularSnapshotSerializer.js",
+      "<rootDir>/node_modules/jest-preset-angular/HTMLCommentSerializer.js"
     ]
   }
 }
