temp package updates

--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -14,6 +14,7 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
+    "@angular-devkit/schematics": "^9.1.15",
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
@@ -28,13 +29,13 @@
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
     "@plexus-interop/broker": "latest",
-    "@plexus-interop/io": "latest",
-    "@plexus-interop/metadata": "latest",
-    "@plexus-interop/common": "latest",
-    "@plexus-interop/protocol": "latest",
-    "@plexus-interop/transport-common": "latest",
     "@plexus-interop/client": "latest",
     "@plexus-interop/client-api": "latest",
+    "@plexus-interop/common": "latest",
+    "@plexus-interop/io": "latest",
+    "@plexus-interop/metadata": "latest",
+    "@plexus-interop/protocol": "latest",
+    "@plexus-interop/transport-common": "latest",
     "@plexus-interop/websocket-transport": "latest",
     "@types/core-js": "^0.9.43",
     "arraybuffer-slice": "^0.1.2",
@@ -42,15 +43,15 @@
     "bootswatch": "^4.1.0",
     "core-js": "^2.5.3",
     "font-awesome": "^4.7.0",
-    "typescript-collections": "1.2.3",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "rxjs": "^5.5.2",
+    "typescript-collections": "1.2.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@types/long": "^4.0.0",
-    "@angular/cli": "1.6.5",
+    "@angular/cli": "^6",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/core-js": "^0.9.43",
