--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -14,7 +14,6 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular-devkit/schematics": "^9.1.15",
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
@@ -50,6 +49,8 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/schematics": "^9.1.15",
     "@types/long": "^4.0.0",
     "@angular/cli": "^6",
     "@angular/compiler-cli": "^5.0.0",
