--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -14,14 +14,14 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "^6.1.10",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/router-store": "^4.1.1",
@@ -44,17 +44,18 @@
     "font-awesome": "^4.7.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.6.7",
     "typescript-collections": "1.2.3",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
     "@angular-devkit/schematics": "^9.1.15",
     "@types/long": "^4.0.0",
     "@angular/cli": "^6",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
     "@types/core-js": "^0.9.43",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -76,7 +77,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "5.8.0",
-    "typescript": "3.7.2",
+    "typescript": "~2.9.0",
     "prr": "1.0.1"
   },
   "jest": {
