--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -14,14 +14,14 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
+    "@angular/animations": "^7.2.16",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/forms": "^7.2.16",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/router": "^7.2.16",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/router-store": "^4.1.1",
@@ -45,17 +45,18 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "rxjs": "^6.6.7",
+    "tslib": "^1.10.0",
     "typescript-collections": "1.2.3",
     "zone.js": "^0.8.14",
     "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/build-angular": "~0.901.15",
     "@angular-devkit/schematics": "^9.1.15",
     "@types/long": "^4.0.0",
-    "@angular/cli": "^6",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/language-service": "^6.1.10",
+    "@angular/cli": "^7.3.10",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/language-service": "^7.2.16",
     "@types/core-js": "^0.9.43",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
