--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -14,19 +14,19 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.16",
-    "@angular/common": "^7.2.16",
-    "@angular/compiler": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/router": "^7.2.16",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
-    "@ngrx/effects": "^7.4.0",
-    "@ngrx/router-store": "^7.4.0",
-    "@ngrx/store": "^7.4.0",
-    "@ngrx/store-devtools": "^7.4.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@ngrx/effects": "^8.6.1",
+    "@ngrx/router-store": "^8.6.1",
+    "@ngrx/store": "^8.6.1",
+    "@ngrx/store-devtools": "^8.6.1",
     "@plexus-interop/broker": "latest",
     "@plexus-interop/client": "latest",
     "@plexus-interop/client-api": "latest",
@@ -38,7 +38,7 @@
     "@plexus-interop/websocket-transport": "latest",
     "@types/core-js": "^0.9.43",
     "arraybuffer-slice": "^0.1.2",
-    "bootstrap": "^4.1.0",
+    "bootstrap": "^4.3.1",
     "bootswatch": "^4.1.0",
     "core-js": "^2.5.3",
     "font-awesome": "^4.7.0",
@@ -47,23 +47,23 @@
     "rxjs": "^6.6.7",
     "tslib": "^1.10.0",
     "typescript-collections": "1.2.3",
-    "zone.js": "^0.8.14",
+    "zone.js": "~0.10.2",
     "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "~0.803.17",
     "@angular-devkit/schematics": "^9.1.15",
     "@types/long": "^4.0.0",
-    "@angular/cli": "^7.3.10",
-    "@angular/compiler-cli": "^7.2.16",
-    "@angular/language-service": "^7.2.16",
+    "@angular/cli": "^8.3.29",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/core-js": "^0.9.43",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jest": "^23.1.3",
     "@types/node": "^7.0.5",
     "@types/rx": "^4.1.1",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^5.0.1",
     "copyfiles": "^1.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -78,7 +78,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "5.8.0",
-    "typescript": "~3.1",
+    "typescript": "~3.5.3",
     "prr": "1.0.1"
   },
   "jest": {
