--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "^9.1.13",
     "@angular/core": "^9.1.13",
     "@angular/forms": "^9.1.13",
+    "@angular/localize": "^9.1.13",
     "@angular/platform-browser": "^9.1.13",
     "@angular/platform-browser-dynamic": "^9.1.13",
     "@angular/router": "^9.1.13",
@@ -44,10 +45,10 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.10.0",
     "typescript-collections": "1.2.3",
-    "zone.js": "~0.10.2",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.15",
