--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -23,11 +23,11 @@
     "@angular/platform-browser": "^10.2.5",
     "@angular/platform-browser-dynamic": "^10.2.5",
     "@angular/router": "^10.2.5",
-    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
-    "@ngrx/effects": "^9.2.1",
-    "@ngrx/router-store": "^9.2.1",
-    "@ngrx/store": "^9.2.1",
-    "@ngrx/store-devtools": "^9.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@ngrx/effects": "^10.1.2",
+    "@ngrx/router-store": "^10.1.2",
+    "@ngrx/store": "^10.1.2",
+    "@ngrx/store-devtools": "^10.1.2",
     "@plexus-interop/broker": "latest",
     "@plexus-interop/client": "latest",
     "@plexus-interop/client-api": "latest",
@@ -38,13 +38,14 @@
     "@plexus-interop/transport-common": "latest",
     "@plexus-interop/websocket-transport": "latest",
     "arraybuffer-slice": "^0.1.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "bootswatch": "^4.1.0",
     "core-js": "^2.5.3",
     "font-awesome": "^4.7.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "typescript-collections": "1.2.3",
     "zone.js": "~0.10.2"
