AAP-21559: lerna link convert (for studio)

--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -28,15 +28,15 @@
     "@ngrx/router-store": "^13.0.2",
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
-    "@plexus-interop/broker": "latest",
-    "@plexus-interop/client": "latest",
-    "@plexus-interop/client-api": "latest",
-    "@plexus-interop/common": "latest",
-    "@plexus-interop/io": "latest",
-    "@plexus-interop/metadata": "latest",
-    "@plexus-interop/protocol": "latest",
-    "@plexus-interop/transport-common": "latest",
-    "@plexus-interop/websocket-transport": "latest",
+    "@plexus-interop/broker": "file:../broker",
+    "@plexus-interop/client": "file:../client",
+    "@plexus-interop/client-api": "file:../client-api",
+    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/io": "file:../io",
+    "@plexus-interop/metadata": "file:../metadata",
+    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/transport-common": "file:../transport-common",
+    "@plexus-interop/websocket-transport": "file:../websocket-transport",
     "arraybuffer-slice": "^0.1.2",
     "bootstrap": "^4.6.0",
     "bootswatch": "^4.1.0",
@@ -48,42 +48,6 @@
     "tslib": "^2.3.1",
     "typescript-collections": "1.2.3",
     "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.3",
-    "@angular-eslint/builder": "^13.0.1",
-    "@angular-eslint/eslint-plugin": "^13.0.1",
-    "@angular-eslint/eslint-plugin-template": "^13.0.1",
-    "@angular-eslint/schematics": "^13.0.1",
-    "@angular-eslint/template-parser": "^13.0.1",
-    "@angular/cli": "^13.2.3",
-    "@angular/compiler-cli": "^13.2.2",
-    "@angular/language-service": "^13.2.2",
-    "@types/core-js": "^0.9.43",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/jest": "^27.4.0",
-    "@types/long": "^4.0.0",
-    "@types/node": "^12.11.1",
-    "@types/rx": "^4.1.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "copyfiles": "^1.2.0",
-    "eslint": "^8.2.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "jest": "^27.5.1",
-    "jest-preset-angular": "^11.1.0",
-    "karma": "~6.3.15",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "prr": "1.0.1",
-    "ts-node": "~3.2.0",
-    "typescript": "~4.4.4"
   },
   "jest": {
     "preset": "jest-preset-angular",
