--- a/web/package.json
+++ b/web/package.json
@@ -28,13 +28,29 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@angular-devkit/build-angular": "~13.2.3",
+    "@angular-eslint/builder": "^13.0.1",
+    "@angular-eslint/eslint-plugin": "^13.0.1",
+    "@angular-eslint/eslint-plugin-template": "^13.0.1",
+    "@angular-eslint/schematics": "^13.0.1",
+    "@angular-eslint/template-parser": "^13.0.1",
+    "@angular/cli": "^13.2.3",
+    "@angular/compiler-cli": "^13.2.2",
+    "@angular/language-service": "^13.2.2",
     "@types/chai": "^4.0.2",
     "@types/core-js": "^0.9.43",
     "@types/fs-extra": "5.0.1",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/jest": "^27.4.0",
     "@types/jstorage": "^0.3.30",
     "@types/long": "^4.0.0",
     "@types/mocha": "^2.2.43",
+    "@types/node": "^12.11.1",
+    "@types/rx": "^4.1.1",
     "@types/superagent": "^3.5.6",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
     "babel-register": "^6.23.0",
     "browserify": "^14.5.0",
     "browserify-istanbul": "^3.0.1",
@@ -47,14 +63,24 @@
     "electron-log": "^2.2.9",
     "electron-mocha": "^4.0.2",
     "electron-packager": "^13.1.1",
+    "eslint": "^8.2.0",
     "espree": "^3.4.3",
     "find-port": "^2.0.1",
     "glob": "^7.1.2",
     "http-server": "^0.11.1",
     "if-env": "1.0.0",
     "is-electron-renderer": "^2.0.1",
-    "jest": "^23.5.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "jest": "^27.5.1",
     "jest-cli": "^23.0.0",
+    "jest-preset-angular": "^11.1.0",
+    "karma": "~6.3.15",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "lerna": "^4.0.0",
     "link-parent-bin": "^2.0.0",
     "minimist": "^1.2.0",
@@ -64,6 +90,8 @@
     "nyc": "^11.2.1",
     "path": "^0.12.7",
     "protobufjs": "6.11.2",
+    "protractor": "~7.0.0",
+    "prr": "1.0.1",
     "renamer": "^0.6.1",
     "shx": "0.2.2",
     "sinon": "^2.4.1",
@@ -72,7 +100,8 @@
     "trash-cli": "^1.4.0",
     "tree-kill": "^1.1.0",
     "ts-mockito": "2.0.2",
-    "typescript": "4.2.4",
+    "ts-node": "~3.2.0",
+    "typescript": "~4.4.4",
     "watchify": "^3.9.0",
     "yarn": "^1.17.3"
   },
