AAP-21559: update transport-common test config for jest 27

--- a/web/packages/transport-common/package.json
+++ b/web/packages/transport-common/package.json
@@ -36,11 +36,13 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
+    "testRunner": "jest-jasmine2",
+    "setupFilesAfterEnv": ["<rootDir>/setup-jasmine.js"],
     "moduleFileExtensions": [
       "ts",
       "js"
     ],
+    "timers": "legacy",
     "testRegex": ".+/dist/main/tests/.+.spec.js$",
     "coverageDirectory": "coverage",
     "collectCoverageFrom": [
