AAP-21559: update client test config for jest 27

--- a/web/packages/client/package.json
+++ b/web/packages/client/package.json
@@ -39,7 +39,8 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
+    "testRunner": "jest-jasmine2",
+    "setupFilesAfterEnv": ["<rootDir>/setup-jasmine.js"],
     "moduleFileExtensions": [
       "ts",
       "js"
