--- a/web/package.json
+++ b/web/package.json
@@ -74,6 +74,7 @@
     "jasmine-reporters": "^2.2.0",
     "jasmine-spec-reporter": "~4.1.0",
     "jest": "^27.5.1",
+    "jest-jasmine2": "^27.5.1",
     "jest-preset-angular": "^11.1.0",
     "karma": "~6.3.15",
     "karma-chrome-launcher": "~3.1.0",
@@ -93,6 +94,7 @@
     "protractor": "~7.0.0",
     "prr": "1.0.1",
     "renamer": "^0.6.1",
+    "rxjs": "^7.5.4",
     "shx": "0.2.2",
     "sinon": "^2.4.1",
     "strip-bom": "^3.0.0",
@@ -101,6 +103,7 @@
     "tree-kill": "^1.1.0",
     "ts-mockito": "2.0.2",
     "ts-node": "~3.2.0",
+    "tslib": "^2.3.1",
     "tslint": "5.8.0",
     "typescript": "~4.4.4",
     "watchify": "^3.9.0",
@@ -124,7 +127,6 @@
     "@plexus-interop/studio": "file:packages/studio",
     "@plexus-interop/transport-common": "file:packages/transport-common",
     "@plexus-interop/web-app-example": "file:packages/web-example",
-    "@plexus-interop/websocket-transport": "file:packages/websocket-transport",
-    "jest-jasmine2": "^27.5.1"
+    "@plexus-interop/websocket-transport": "file:packages/websocket-transport"
   }
 }
