--- a/web/packages/e2e/package.json
+++ b/web/packages/e2e/package.json
@@ -8,13 +8,13 @@
   "private": true,
   "scripts": {
     "prebuild": "trash dist",
-    "build": "yarn build:main && npm run copy-assets && npm run build-host-proxy",
+    "build": "npm run build:main && npm run copy-assets && npm run build-host-proxy",
     "build:main": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
     "lint": "tslint src/**/*.ts",
-    "unit": "yarn build && jest --coverage",
-    "pretest": "yarn lint",
-    "test": "yarn unit",
+    "unit": "npm run build && jest --coverage",
+    "pretest": "npm run lint",
+    "test": "npm run unit",
     "gen-echo-js": "pbjs --force-long -t static-module -r echo-client -w commonjs -o src/echo/gen/plexus-messages.js src/echo/metadata/messages.proto",
     "gen-echo-ts": "pbts --force-long -o src/echo/gen/plexus-messages.d.ts src/echo/gen/plexus-messages.js",
     "gen-echo-protocol": "npm run gen-echo-js && npm run gen-echo-ts",
