--- a/web/packages/protocol/package.json
+++ b/web/packages/protocol/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "prebuild": "trash dist",
-    "build": "npm run gen-transport-protocol && npm run gen-client-protocol && yarn build:main",
+    "build": "npm run gen-transport-protocol && npm run gen-client-protocol && npm run build:main",
     "copy-gen-folder": "copyfiles src/gen/* dist/main",
     "build:main": "tsc -p tsconfig.json && npm run copy-gen-folder",
     "gen-client-js": "pbjs --force-long --no-delimited --no-beautify --no-verify --no-create -t static-module -r plexusClient -w commonjs -o src/gen/internal-client-protocol.js ../../../protocol/plexus.interop.proto",
