--- a/web/packages/electron-launcher/package.json
+++ b/web/packages/electron-launcher/package.json
@@ -8,13 +8,13 @@
   "private": true,
   "scripts": {
     "prebuild": "trash dist",
-    "build": "yarn build:main && npm run copy-gen-folders && npm run package && npm run build-binary",
+    "build": "npm run build:main && npm run copy-gen-folders && npm run package && npm run build-binary",
     "package": "browserify ./dist/main/src/launcher/Main.js -x electron --ignore-missing --node --outfile ./dist/electronLauncher.bundle.js",
     "copy-gen-folders": "copyfiles src/launcher/gen/* dist/main",
     "build:main": "tsc -p tsconfig.json",
-    "pretest": "yarn lint",
-    "test": "yarn unit",
-    "unit": "yarn build && jest --coverage",
+    "pretest": "npm run lint",
+    "test": "npm run unit",
+    "unit": "npm run build && jest --coverage",
     "gen-launcher-js": "pbjs --force-long -t static-module -r launcher -w commonjs -o src/launcher/gen/plexus-messages.js ../../../plexus-desktop/src/Plexus.Interop.Samples.Configuration/metadata/interop/appLauncher.proto ../../../plexus-desktop/src/Plexus.Interop.Samples.Configuration/metadata/interop/common.proto",
     "gen-launcher-ts": "pbts --force-long -o src/launcher/gen/plexus-messages.d.ts src/launcher/gen/plexus-messages.js",
     "gen-launcher-protocol": "npm run gen-launcher-js && npm run gen-launcher-ts",
