--- a/web/packages/common/tsconfig.json
+++ b/web/packages/common/tsconfig.json
@@ -1,42 +1,16 @@
 {
+    "extends": "../tsconfig.settings.json",
     "compilerOptions": {
-        "target": "es5",
         "outDir": "dist/main",
         "rootDir": ".",
-        "moduleResolution": "node",
-        "module": "commonjs",
-        "declaration": true,
-        "importHelpers": true,
-        "inlineSourceMap": true,
-        "listFiles": false,
-        "traceResolution": false,
-        "strictNullChecks": true,
-        "forceConsistentCasingInFileNames": true,
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noUnusedLocals": true,
-        "noImplicitThis": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "removeComments": false,
-        "pretty": true,
-        "lib": [
-            "es6", "dom"
-        ],
-        "types": [
-            "jest",
-            "long",
-            "node"
-        ],
         "baseUrl": "."
     },
+    "references": [],
     "include": [
         "src/**/*.ts",
         "tests/**/*.ts"
     ],
     "exclude": [
         "node_modules/**"
-    ],
-    "compileOnSave": false
+    ]
 }
