--- a/web/packages/remote/tsconfig.json
+++ b/web/packages/remote/tsconfig.json
@@ -1,35 +1,13 @@
 {
+    "extends": "../tsconfig.settings.json",
     "compilerOptions": {
-        "target": "es5",
         "outDir": "dist/main",
         "rootDir": ".",
-        "moduleResolution": "node",
-        "module": "commonjs",
-        "declaration": true,
-        "importHelpers": true,
-        "inlineSourceMap": true,
-        "listFiles": false,
-        "traceResolution": false,
-        "strictNullChecks": true,
-        "forceConsistentCasingInFileNames": true,
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "pretty": true,
-        "removeComments": false,
-        "lib": [
-            "es6", "dom"
-        ],
-        "types": [
-            "node",
-            "jest",
-            "long"
-        ],
         "baseUrl": "."
     },
+    "references": [
+        { "path": "../common" }
+    ],
     "include": [
         "src/**/*.ts",
         "tests/**/*.ts"
