--- a/web/packages/studio/tsconfig.json
+++ b/web/packages/studio/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "compileOnSave": false,
+  "extends": "../tsconfig.settings.json",
   "compilerOptions": {
     "downlevelIteration": true,
     "importHelpers": true,
@@ -9,14 +9,20 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "target": "es2015",
-    "types": [
-      "jest"
-    ],
-    "lib": [
-      "es2015",
-      "dom"
-    ],
+    "types": ["jest"],
+    "lib": ["es2015", "dom"],
     "module": "es2020",
     "baseUrl": "./"
-  }
+  },
+  "references": [
+    { "path": "../broker" },
+    { "path": "../client" },
+    { "path": "../client-api" },
+    { "path": "../common" },
+    { "path": "../io" },
+    { "path": "../metadata" },
+    { "path": "../protocol" },
+    { "path": "../transport-common" },
+    { "path": "../websocket-transport" }
+  ]
 }
