--- a/web/packages/web-example/tsconfig.json
+++ b/web/packages/web-example/tsconfig.json
@@ -1,39 +1,21 @@
 {
+  "extends": "../tsconfig.settings.json",
   "compilerOptions": {
-    "target": "es5",
     "outDir": "dist/main",
     "rootDir": ".",
-    "moduleResolution": "node",
-    "module": "commonjs",
-    "declaration": true,
-    "importHelpers": true,
-    "inlineSourceMap": true,
-    "listFiles": false,
-    "traceResolution": false,
-    "strictNullChecks": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "pretty": true,
-    "lib": [
-      "es6", "dom"
-    ],
-    "types": [
-      "node",
-      "long"
-    ],
     "baseUrl": "."
   },
+  "references": [
+    { "path": "../client" },
+    { "path": "../common" },
+    { "path": "../transport-common" },
+    { "path": "../websocket-transport" }
+  ],
   "include": [
     "src/**/*.ts",
     "tests/**/*.ts"
   ],
   "exclude": [
     "node_modules/**"
-  ],
-  "compileOnSave": false
+  ]
 }
