--- a/web/packages/broker/tsconfig.json
+++ b/web/packages/broker/tsconfig.json
@@ -12,6 +12,12 @@
         { "path": "../protocol" },
         { "path": "../transport-common" }
     ],
+    "types": [
+        "node",
+        "jest",
+        "long",
+        "jstorage"
+    ],
     "include": [
         "src/**/*.ts",
         "tests/**/*.ts"
