--- a/web/packages/tsconfig.settings.json
+++ b/web/packages/tsconfig.settings.json
@@ -1,32 +1,37 @@
 {
-  "compilerOptions": {
-      // Always include these settings
-      "composite": true,
-      "declaration": true,
-      "declarationMap": true,
-      "sourceMap": true,
-      // These settings are totally up to you
-      "target": "es5",
-      "moduleResolution": "node",
-      "module": "commonjs",
-      "importHelpers": true,
-      "strictNullChecks": true,
-      "forceConsistentCasingInFileNames": true,
-      "noFallthroughCasesInSwitch": true,
-      "noImplicitAny": true,
-      "noImplicitReturns": true,
-      "noUnusedLocals": true,
-      "noImplicitThis": true,
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-      "removeComments": false,
-      "pretty": true,
-      "lib": [
-          "es6", "dom"
-      ],
-      "types": [
-          "jest",
-          "node"
-      ],
-  }
+    "compilerOptions": {
+        // Always include these settings
+        "composite": true,
+        "declaration": true,
+        "declarationMap": true,
+        "sourceMap": true,
+        // These settings are totally up to you
+        "target": "es5",
+        "moduleResolution": "node",
+        "module": "commonjs",
+        "importHelpers": true,
+        "strictNullChecks": true,
+        "forceConsistentCasingInFileNames": true,
+        "noFallthroughCasesInSwitch": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "removeComments": false,
+        "pretty": true,
+
+        // handle these with eslint
+        "noUnusedLocals": false,
+        "noImplicitThis": false,
+        "noImplicitAny": false,
+        "noImplicitReturns": true,
+
+        "lib": [
+            "es6", "dom"
+        ],
+        "types": [
+            "node",
+            "jest",
+            "long",
+            "jstorage"
+        ]
+    }
 }
