--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "prebuild": "npm run test",
-    "build": "ng build && npm run copy-to-bin",
+    "build": "npm run build:bundle",
+    "build:bundle": "ng build && npm run copy-to-bin",
     "test": "jest",
     "lint": "ng lint",
     "copy-to-bin": "copyfiles dist/* ../../../bin/win-x86/broker/studio -u 1",
