--- a/web/packages/broker/package.json
+++ b/web/packages/broker/package.json
@@ -6,10 +6,10 @@
   "version": "0.1.0",
   "scripts": {
     "prebuild": "npm run lint && trash dist",
-    "build": "npm run build:main && npm run build:host",
+    "build": "npm run build:main && npm run build:bundle",
     "build:main": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
-    "build:host": "browserify dist/main/src/api/CrossDomainHostEntryPoint.js -s proxyHost -o dist/main/src/CrossDomainHostBuilder.bundle.js",
+    "build:bundle": "browserify dist/main/src/api/CrossDomainHostEntryPoint.js -s proxyHost -o dist/main/src/CrossDomainHostBuilder.bundle.js",
     "lint": "tslint src/**/*.ts",
     "pretest": "npm run lint",
     "test": "jest --coverage"
