--- a/web/packages/ccy-pair-rate-provider/package.json
+++ b/web/packages/ccy-pair-rate-provider/package.json
@@ -16,8 +16,9 @@
     "prebuild": "trash dist",
     "compile": "tsc -p tsconfig.json",
     "copy-assets": "copyfiles src/gen/* dist/main && copyfiles -f src/views/* dist",
-    "package": "browserify ./dist/main/src/index.js --outfile ./dist/app.bundle.js",
-    "build": "npm run compile && npm run copy-assets && npm run package",
-    "postbuild": "copyfiles ./dist/* -f ../../../bin/win-x86/samples/quick-start/apps/WebCcyPairRateProvider"
+    "prebuild:bundle": "npm run copy-assets",
+    "build:bundle": "browserify ./dist/main/src/index.js --outfile ./dist/app.bundle.js",
+    "build": "npm run compile && npm run copy-assets && npm run build:bundle",
+    "postbuild:bundle": "copyfiles ./dist/* -f ../../../bin/win-x86/samples/quick-start/apps/WebCcyPairRateProvider"
   }
 }
