--- a/web/packages/cli/package.json
+++ b/web/packages/cli/package.json
@@ -13,6 +13,7 @@
     "copy-assets": "copyfiles -f ../../../dsl/gen/cli/build/libs/cli-*-all.jar dist/lib",
     "rename-lib": "renamer --find cli-.*-all.jar --regex --replace plexusgen.jar dist/lib/* && trash dist/lib/cli-.*-all.jar",
     "build": "npm run build:main",
+    "build:bundle": "npm run copy-assets && npm run rename-lib",
     "postinstall": "node ./install.js",
     "postbuild": "npm run test",
     "build:main": "tsc -p tsconfig.json",
