--- a/web/packages/web-example/package.json
+++ b/web/packages/web-example/package.json
@@ -6,11 +6,12 @@
   "private": true,
   "scripts": {
     "prebuild": "trash dist",
-    "compile": "tsc -p tsconfig.json",
+    "build:main": "tsc -p tsconfig.json",
     "package": "browserify ./dist/main/src/greeting/server/Main.js --outfile ./dist/greetingServer.bundle.js",
     "copy-assets": "copyfiles -f src/greeting/views/* ./dist && copyfiles -f ./dist/greetingServer* ../../../bin/win-x86/samples/greeting/apps/WebGreetingServer",
     "copy-gen-folders": "copyfiles src/greeting/server/gen/* dist/main",
-    "build": "npm run compile && npm run copy-gen-folders && npm run package && npm run copy-assets",
+    "build": "npm run build:main && npm run build:bundle",
+    "build:bundle": "npm run copy-gen-folders && npm run package && npm run copy-assets",
     "gen-server-js": "pbjs --force-long -t static-module -r launcher -w commonjs -o src/greeting/server/gen/plexus-messages.js ../../../plexus-desktop/src/Plexus.Interop.Samples.Configuration/metadata/interop/samples.proto ../../../plexus-desktop/src/Plexus.Interop.Samples.Configuration/metadata/interop/common.proto",
     "gen-server-ts": "pbts --force-long -o src/greeting/server/gen/plexus-messages.d.ts src/greeting/server/gen/plexus-messages.js",
     "gen-server-protocol": "npm run gen-server-js && npm run gen-server-ts",
