AAP-21559: convert packages to ts-jest
part 1

--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "prepublish-all": "node ./scripts/replace-auth-vars.js --publish && lerna exec -- cross-var shx cp $LERNA_ROOT_PATH/.npmrc .npmrc",
     "publish-all": "lerna publish from-package --loglevel=verbose",
     "postpublish-all": "shx rm -rf .npmrc && lerna exec -- shx rm -rf .npmrc",
+    "test": "lerna run --stream test",
     "e2e-native": "cd ./packages/e2e && npm run e2e-native",
     "poste2e-native": "npm run coverage",
     "e2e-web": "cd ./packages/e2e && npm run e2e-web-electron",
@@ -103,6 +104,7 @@
     "trash": "^4.1.0",
     "trash-cli": "^1.4.0",
     "tree-kill": "^1.1.0",
+    "ts-jest": "^27.1.3",
     "ts-mockito": "2.0.2",
     "ts-node": "~3.2.0",
     "tslib": "^2.3.1",
