--- a/web/packages/metadata/package.json
+++ b/web/packages/metadata/package.json
@@ -5,14 +5,11 @@
   "license": "Apache-2.0",
   "version": "0.1.0",
   "scripts": {
-    "prebuild": "npm run lint && trash dist",
     "build": "npm run build:main",
-    "postbuild": "npm run test",
     "build:main": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
     "lint": "tslint src/**/*.ts",
     "unit": "jest --coverage",
-    "pretest": "npm run lint",
     "test": "npm run unit"
   },
   "dependencies": {
@@ -25,21 +22,11 @@
   },
   "main": "dist/main/src/index.js",
   "jest": {
+    "preset": "ts-jest",
     "testEnvironment": "node",
     "testRunner": "jest-jasmine2",
     "setupFilesAfterEnv": ["<rootDir>/setup-jasmine.js"],
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "testRegex": ".+/dist/main/tests/.+.spec.js$",
-    "coverageDirectory": "coverage",
-    "collectCoverageFrom": [
-      "dist/main/src/**/*.js",
-      "!dist/main/src/gen/**/*.js",
-      "!src/*.d.ts",
-      "!src/**/*.d.ts",
-      "!src/**/*.spec.ts"
-    ]
+    "testMatch": ["<rootDir>/tests/**/*.spec.ts"],
+    "collectCoverageFrom": ["src/**/*.ts", "!src/**/*.d.ts"]
   }
 }
