--- a/web/packages/e2e/package.json
+++ b/web/packages/e2e/package.json
@@ -7,14 +7,12 @@
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
-    "prebuild": "trash dist",
     "build": "npm run build:main && npm run build:bundle",
     "build:main": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
     "build:bundle": "npm run copy-assets && npm run build-host-proxy",
     "lint": "tslint src/**/*.ts",
-    "unit": "npm run build && jest --coverage",
-    "pretest": "npm run lint",
+    "unit": "jest --coverage",
     "test": "npm run unit",
     "gen-echo-js": "pbjs --force-long -t static-module -r echo-client -w commonjs -o src/echo/gen/plexus-messages.js src/echo/metadata/messages.proto",
     "gen-echo-ts": "pbts --force-long -o src/echo/gen/plexus-messages.d.ts src/echo/gen/plexus-messages.js",
@@ -52,20 +50,11 @@
     "protobufjs": "6.11.2"
   },
   "jest": {
-    "testEnvironment": "node",
-    "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "testRegex": ".+/dist/main/tests/.+spec.js$",
-    "coverageDirectory": "coverage",
-    "collectCoverageFrom": [
-      "dist/main/src/**/*.js",
-      "!dist/main/src/gen/**/*.js",
-      "!src/*.d.ts",
-      "!src/**/*.d.ts",
-      "!src/**/*.spec.ts"
-    ]
+    "preset": "ts-jest",
+    "testEnvironment": "jsdom",
+    "testRunner": "jest-jasmine2",
+    "setupFilesAfterEnv": ["<rootDir>/setup-jasmine.js"],
+    "testMatch": ["<rootDir>/tests/**/*.spec.ts"],
+    "collectCoverageFrom": ["src/**/*.ts", "!src/**/*.d.ts"]
   }
 }
