--- a/web/packages/electron-launcher/package.json
+++ b/web/packages/electron-launcher/package.json
@@ -7,15 +7,13 @@
   "main": "./dist/electronLauncher.bundle.js",
   "private": true,
   "scripts": {
-    "prebuild": "trash dist",
     "build": "npm run build:main && npm run build:bundle",
     "build:bundle": "npm run copy-gen-folders && npm run package && npm run build-binary",
     "package": "browserify ./dist/main/src/launcher/Main.js -x electron --ignore-missing --node --outfile ./dist/electronLauncher.bundle.js",
     "copy-gen-folders": "copyfiles src/launcher/gen/* dist/main",
     "build:main": "tsc -p tsconfig.json",
-    "pretest": "npm run lint",
     "test": "npm run unit",
-    "unit": "npm run build && jest --coverage",
+    "unit": "jest --coverage --passWithNoTests",
     "gen-launcher-js": "pbjs --force-long -t static-module -r launcher -w commonjs -o src/launcher/gen/plexus-messages.js ../../../plexus-desktop/src/Plexus.Interop.Samples.Configuration/metadata/interop/appLauncher.proto ../../../plexus-desktop/src/Plexus.Interop.Samples.Configuration/metadata/interop/common.proto",
     "gen-launcher-ts": "pbts --force-long -o src/launcher/gen/plexus-messages.d.ts src/launcher/gen/plexus-messages.js",
     "gen-launcher-protocol": "npm run gen-launcher-js && npm run gen-launcher-ts",
@@ -47,20 +45,10 @@
     "ws": "^3.2.0"
   },
   "jest": {
+    "preset": "ts-jest",
     "testEnvironment": "node",
-    "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "testRegex": ".+/dist/main/tests/.+spec.js$",
-    "coverageDirectory": "coverage",
-    "collectCoverageFrom": [
-      "dist/main/src/**/*.js",
-      "!dist/main/src/gen/**/*.js",
-      "!src/*.d.ts",
-      "!src/**/*.d.ts",
-      "!src/**/*.spec.ts"
-    ]
+    "setupFilesAfterEnv": ["<rootDir>/setup-jasmine.js"],
+    "testMatch": ["<rootDir>/tests/**/*.spec.ts"],
+    "collectCoverageFrom": ["src/**/*.ts", "!src/**/*.d.ts"]
   }
 }
