AAP-21559: add flag to run e2e unit tests conditionally

--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,9 @@
     "prepublish-all": "node ./scripts/replace-auth-vars.js --publish && lerna exec -- cross-var shx cp $LERNA_ROOT_PATH/.npmrc .npmrc",
     "publish-all": "lerna publish from-package --loglevel=verbose",
     "postpublish-all": "shx rm -rf .npmrc && lerna exec -- shx rm -rf .npmrc",
+    "lint": "lerna run --stream lint",
     "test": "lerna run --stream test",
+    "verify": "npm run lint && npm run test",
     "e2e-native": "cd ./packages/e2e && npm run e2e-native",
     "poste2e-native": "npm run coverage",
     "e2e-web": "cd ./packages/e2e && npm run e2e-web-electron",
