--- a/web/packages/client-api/package.json
+++ b/web/packages/client-api/package.json
@@ -5,6 +5,7 @@
   "main": "dist/main/src/index.js",
   "description": "Client contracts, shared between client and broker",
   "license": "Apache-2.0",
+  "sideEffects": false,
   "scripts": {
     "prebuild": "npm run lint && trash dist",
     "build": "npm run build:main",
