--- a/web/packages/client/package.json
+++ b/web/packages/client/package.json
@@ -5,6 +5,7 @@
   "main": "dist/main/src/index.js",
   "description": "Client for Plexus Interop",
   "license": "Apache-2.0",
+  "sideEffects": false,
   "scripts": {
     "build": "npm run build:main",
     "build:main": "tsc -p tsconfig.json",
