--- a/web/packages/common-api-impl/package.json
+++ b/web/packages/common-api-impl/package.json
@@ -4,6 +4,7 @@
   "description": "Common API implementation",
   "license": "Apache-2.0",
   "version": "0.1.0",
+  "sideEffects": false,
   "scripts": {
     "build": "npm run build:main && npm run build:bundle",
     "build:main": "tsc -p tsconfig.json",
