--- a/web/packages/websocket-transport/package.json
+++ b/web/packages/websocket-transport/package.json
@@ -4,6 +4,7 @@
   "description": "Web Socket based Transport for Plexus Web Interop",
   "license": "Apache-2.0",
   "version": "0.1.0",
+  "sideEffects": false,
   "scripts": {
     "build": "npm run build:main",
     "build:main": "tsc -p tsconfig.json",
